@@ -1020,4 +1020,38 @@ class CoursePress_Data_Module {
 			CoursePress_Data_Unit::show_page( $unit_id, $page_id, $course_id );
 		}
 	}
+
+	/**
+	 * Change page number for modules, when we delete page (section).
+	 *
+	 * @since 2.0.2
+	 *
+	 * @param integer $unit_id Unit ID.
+	 * @param integer $page_number Deleted page number.
+	 */
+	public static function decrease_page_number( $unit_id, $page_number ) {
+		if ( empty( $unit_id ) ) {
+			return;
+		}
+		$args = array(
+			'post_type' => self::get_post_type_name(),
+			'post_parent' => $unit_id,
+			'meta_query' => array(
+				array(
+					'key' => 'module_page',
+					'value' => intval( $page_number ),
+					'compare' => '>',
+					'type' => 'SIGNED',
+				),
+			),
+			'fields' => 'ids',
+			'posts_per_page' => -1,
+		);
+		$the_query = new WP_Query( $args );
+		foreach ( $the_query->posts as $post_id ) {
+			$value = get_post_meta( $post_id, 'module_page', true );
+			$value--;
+			update_post_meta( $post_id, 'module_page', $value );
+		}
+	}
 }
